Formatting fixes and fixed vertical alignment of info button

--- a/src/site/shared/containers/HistoryBox/index.scss
+++ b/src/site/shared/containers/HistoryBox/index.scss
@@ -82,75 +82,60 @@ $historybox-width: 250px;
         }
     }
 
-    &__entry {
-        height: auto;
-        line-height: 30px;
-        padding: 10px;
-
+    &__entry, &__groupentry {
         margin: 5px;
-        text-align: center;
-
-        border: 1px solid $secondary-color;
-        border-radius: 7px;
-
-        position: relative;
-
-        cursor: pointer;
-
-        &__actionname {
-            display: inline-block;
-        }
-
-        &__extrainfo {
-            text-align: left;
-
-            &__icon {
-                left: 5px;
-                position: absolute;
-                vertical-align: middle;
-            }
-        }
-    }
-
-    &__groupentry {
-        margin: 5px;
-
-        border: 1px solid $secondary-color;
-        border-radius: 7px;
-
         padding: 5px;
 
         line-height: 30px;
 
+        border: 1px solid $secondary-color;
+        border-radius: 7px;
+
         cursor: pointer;
 
-        &__actionname {
-            display: inline-block;
-            padding-left: 5px;
+        &__header {
+            width: 100%;
+
+            display: flex;
+            flex-direction: row;
+            align-items: center;
         }
 
-        & > span {
-            font-size: 18px;
+        &__extrainfo {
+            margin-left: 5px;
         }
+    }
 
-        &__extrainfo {  
-            padding-left: 5px;
-                      
-            &__icon {
-                float: left;
-                vertical-align: middle;
+    &__entry {
+        &__header {
+            & > span {
+                margin-left: 5px;
             }
         }
+    }
+    &__groupentry {
+        &__header {
+            justify-content: space-between;
 
-        &__collapse_btn {
-            margin-right: 5px;
-            float: right;
+            & > div {
+                display: flex;
+                justify-content: flex-start;
+                align-items: center;
 
-            transition: 0.5s;
-            transform: rotate(90deg);
+                & > span {
+                    margin-left: 5px;
+                }
+            }
+            & > span {
+                margin-right: 5px;
 
-            &-collapsed {
-                transform: rotate(0deg);
+                font-size: 18px;
+
+                transition: 0.5s;
+                transform: rotate(90deg);
+                &.collapsed {
+                    transform: rotate(0deg);
+                }
             }
         }
     }
